[build-system]
requires = ["flit_core>=3.6"]
build-backend = "flit_core.buildapi"

[project]
name = "variant_annotator"
version = "0.0.1"
authors = [
  { name="Max Perez", email="oaklandmax@gmail.com" },
]
description = "MyOme Python Challenge"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://maxjperez.com"
"Bug Tracker" = "https://maxjperez.com"
